--- a/android/app/src/main/res/layout/note.xml
+++ b/android/app/src/main/res/layout/note.xml
@@ -19,8 +19,8 @@
         android:layout_marginBottom="0dp"
         android:contentDescription="@string/appwidget_text"
         android:text="@string/appwidget_text"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
+        android:textSize="22sp"
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
